--- a/playground/package.json
+++ b/playground/package.json
@@ -1,4 +1,17 @@
 {
     "private": true,
-    "name": "storyblok-module-playground"
-}
+    "version": "0.0.1",
+    "name": "storyblok-module-playground",
+    "scripts": {
+      "build": "nuxt build",
+      "dev": "nuxt dev",
+      "generate": "nuxt generate",
+      "preview": "nuxt preview"
+    },
+    "devDependencies": {
+      "nuxt": "3.0.0-rc.13",
+      "@nuxtjs/tailwindcss": "^6.1.3",
+      "nuxt-storyblok": "latest"
+    }
+  }
+  
